--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Tiny tool to generate a source file with a list of requires.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "babel -d lib/ src/",
+    "test": "mocha src/test/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,16 @@
   "bugs": {
     "url": "https://github.com/epsitec-sa/electrum-require-components/issues"
   },
-  "homepage": "https://github.com/epsitec-sa/electrum-require-components#readme"
+  "homepage": "https://github.com/epsitec-sa/electrum-require-components#readme",
+  "devDependencies": {
+    "babel-cli": "^6.2.4",
+    "babel-core": "^6.2.4",
+    "babel-preset-es2015": "^6.2.4",
+    "babel-preset-stage-0": "^6.2.4",
+    "chai": "^3.4.1",
+    "mai-chai": "^1.1.2",
+    "mocha": "^2.3.4",
+    "path": "^0.12.7",
+    "react": "^0.14.3"
+  }
 }
