--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "electrum-require-components",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "description": "Tiny tool to generate a source file with a list of requires.",
   "main": "lib/index.js",
+  "bin": {
+    "electrum-require-components": "./bin/bin.js"
+  },
   "scripts": {
     "compile": "babel -d lib/ src/",
+    "prepublish": "npm run compile",
     "test": "mocha src/test/**/*.js"
   },
   "repository": {
