--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "electrum-require-components": "./bin/bin.js"
   },
   "scripts": {
-    "compile": "rimraf ./lib && babel -d lib src",
+    "compile": "rimraf ./lib && babel -d lib/ src/",
     "prepublish": "npm run compile",
     "test": "mocha src/test/**/*.js",
     "livetest": "npm run compile && node lib/index.js --wrap --crlf ./src sample .foo.js foo.js"
