--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "electrum-require-components",
-  "version": "1.3.0",
-  "description": "Tiny tool to generate a source file with a list of requires.",
+  "version": "1.4.0",
+  "description": "This Electrum build tool generates a source file with a list of requires.",
   "main": "lib/index.js",
   "bin": {
     "electrum-require-components": "./bin/bin.js"
   },
   "scripts": {
-    "compile": "rimraf ./lib && babel -d lib src",
+    "compile": "rimraf ./lib && babel --quiet --out-dir lib src",
     "prepublish": "npm run compile",
-    "test": "mocha src/test/**/*.js",
+    "test": "npm run compile && mocha lib/test/**/*.js",
     "livetest": "npm run compile && node lib/index.js --wrap --crlf ./src sample .foo.js foo.js"
   },
   "repository": {
@@ -28,15 +28,15 @@
   },
   "homepage": "https://github.com/epsitec-sa/electrum-require-components#readme",
   "devDependencies": {
-    "babel-cli": "^6.2.4",
-    "babel-core": "^6.2.4",
-    "babel-preset-es2015": "^6.2.4",
-    "babel-preset-stage-0": "^6.2.4",
-    "chai": "^3.4.1",
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
     "mai-chai": "^1.1.2",
-    "mocha": "^2.3.4",
+    "mocha": "^2.4.5",
     "path": "^0.12.7",
-    "react": "^0.14.3",
-    "rimraf": "^2.4.4"
+    "react": "^0.14.7",
+    "rimraf": "^2.5.1"
   }
 }
