--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "electrum-require-components",
-  "version": "1.4.1",
+  "version": "1.5.0",
   "description": "This Electrum build tool generates a source file with a list of requires.",
   "main": "lib/index.js",
   "bin": {
     "electrum-require-components": "./bin/bin.js"
   },
   "scripts": {
-    "compile": "rimraf ./lib && babel --quiet --out-dir lib src",
+    "babel": "babel --quiet --out-dir lib src && babel --quiet --out-dir lib.test src.test",
+    "clean": "rimraf ./lib && rimraf ./lib.test",
+    "compile": "npm run clean && require-self && npm run babel",
+    "mocha": "mocha lib.test/**/*.js",
     "prepublish": "npm run compile",
-    "test": "npm run compile && mocha lib/test/**/*.js",
+    "test": "npm run compile && npm run mocha",
     "livetest": "npm run compile && node lib/index.js --wrap --crlf ./src sample .foo.js foo.js"
   },
   "repository": {
@@ -28,15 +31,10 @@
   },
   "homepage": "https://github.com/epsitec-sa/electrum-require-components#readme",
   "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-core": "^6.5.1",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "chai": "^3.5.0",
-    "mai-chai": "^1.1.2",
-    "mocha": "^2.4.5",
-    "path": "^0.12.7",
+    "babel-env": "^1.1.0",
+    "mai-chai": "^2.4.0",
     "react": "^0.14.7",
-    "rimraf": "^2.5.1"
+    "rimraf": "^2.5.1",
+    "require-self": "^0.1.0"
   }
 }
