--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electrum-require-components",
-  "version": "1.6.2",
+  "version": "1.7.0",
   "description": "This Electrum build tool generates a source file with a list of requires.",
   "main": "lib/index.js",
   "bin": {
@@ -33,8 +33,8 @@
   "devDependencies": {
     "babel-env": "^1.2.2",
     "mai-chai": "^2.5.3",
-    "react": "^0.14.7",
-    "rimraf": "^2.5.1",
-    "require-self": "^0.1.0"
+    "react": "^15.0.2",
+    "require-self": "^0.1.0",
+    "rimraf": "^2.5.1"
   }
 }
